# image-processor

./: .gitignore  CMakeLists.txt  image_processor.cpp  readme.md
filters/: filter_source.cpp  filter_source.h
filters/filters_impl/: chess_brigthness.cpp  chess_brigthness.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
image/bmp/: bitmap.cpp  bitmap.h
image/pixel/: pixel.cpp  pixel.h
utils/: parser.cpp  parser.h
